# rustdesk-address-book

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example  docker-compose.yml
migrations/: 001_create_users.sql  002_create_groups.sql  003_create_address_books.sql  004_create_peers.sql  005_create_tags.sql  006_create_devices.sql  007_create_audit_log.sql
src/: config.rs  db.rs  error.rs  main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  password.rs
src/models/: address_book.rs  device.rs  group.rs  mod.rs  peer.rs  tag.rs  user.rs
src/routes/: ab.rs  auth.rs  frontend.rs  groups.rs  mod.rs  peers.rs  system.rs  tags.rs  users.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  style.css
web/src/api/: addressBook.ts  auth.ts  client.ts
web/src/components/layout/: AppLayout.vue  Sidebar.vue  TopBar.vue
web/src/components/peers/: AddPeerDialog.vue  PeerCard.vue  PeerGrid.vue
web/src/components/tags/: TagPanel.vue
web/src/router/: index.ts
web/src/stores/: addressBook.ts  auth.ts  ui.ts
web/src/views/: AddressBookView.vue  AuditLogView.vue  DashboardView.vue  GroupsView.vue  LoginView.vue  UsersView.vue
